# dirserve

./: readme.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: api.rs  frontend.rs  mod.rs  root.rs
frontend/: README.md  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.ts  router.ts
frontend/src/plugins/: vuetify.ts
frontend/src/views/: home.vue
