[package]
name = "dirserve"
version = "0.1.0"
authors = ["Patrick Towles <james.towles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"

rocket_contrib = "0.4.4"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.52"
rust-embed = "5.5.1"
structopt = "0.3.14"
